# MinePP

./: CMakeLists.txt  README.md  imgui.ini
image/block_mask/: Outline.xcf
model/: Block.blend  Block.blend1
shader/: BatchShader.glsl  GUIShader.glsl  Shader.glsl  TextShader.glsl  ThumbnailShader.glsl
source/: Application.cpp  Application.hpp  Block.cpp  Block.hpp  BlockCache.cpp  BlockCache.hpp  BlockModel.cpp  BlockModel.hpp  BlockRayCaster.cpp  BlockRayCaster.hpp  BlockRenderer.cpp  BlockRenderer.hpp  BlockType.hpp  Camera.cpp  Camera.hpp  Constants.hpp  HUD.cpp  HUD.hpp  InventoryHUD.cpp  InventoryHUD.hpp  PrecompiledHeader.hpp  Scene.cpp  Scene.hpp  TerrainGenerator.cpp  TerrainGenerator.hpp  Transform.cpp  Transform.hpp  Window.cpp  Window.hpp  World.cpp  World.hpp  WorldRenderer.cpp  WorldRenderer.hpp  main.cpp
source/core/: Constants.hpp  Ray.cpp  Ray.hpp  Utility.cpp  Utility.hpp
source/gui/: BlockThumbnailRenderer.cpp  BlockThumbnailRenderer.hpp  Rectangle.hpp  RectangleRenderer.cpp  RectangleRenderer.hpp  Text.hpp  TextRenderer.cpp  TextRenderer.hpp
source/opengl/: Buffer.cpp  Buffer.hpp  Framebuffer.cpp  Framebuffer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Type.cpp  Type.hpp  VertexArray.cpp  VertexArray.hpp
source/scene/: MainMenu.cpp  MainMenu.hpp  Scene.hpp  Transform.cpp  Transform.hpp
source/scene/world/: Batch.cpp  Batch.hpp  Block.cpp  Block.hpp  BlockCache.cpp  BlockCache.hpp  BlockRayCaster.cpp  BlockRayCaster.hpp  BlockRenderer.cpp  BlockRenderer.hpp  Camera.cpp  Camera.hpp  Chunk.cpp  Chunk.hpp  Inventory.hpp  InventoryHUD.cpp  InventoryHUD.hpp  World.cpp  World.hpp  WorldCache.cpp  WorldCache.hpp
